# spark-workflow-main

./: .gitignore  ARGOCD_DECISION_REPORT.md  ARGOCD_DEPLOYMENT_GUIDE.md  ARGOCD_DEPLOYMENT_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  SUPPORT.md  arc.md  docker-compose.services.yaml  docker-compose.yaml  publiccode.yml  pyproject.toml
02-backend/comment_service/: .env.local  .pre-commit-config.yaml  Dockerfile  Dockerfile.dockerignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
02-backend/comment_service/src/: main.py
02-backend/comment_service/src/config/: settings.py
02-backend/comment_service/src/exceptions/: __init__.py  exception_handlers.py  exceptions.py
02-backend/comment_service/src/models/: db_models.py
02-backend/comment_service/src/services/: comment_service.py
02-backend/comment_service/src/utils/: app_state.py  lifespan.py
02-backend/document_management_service/: .env.local  .pre-commit-config.yaml  Dockerfile  Dockerfile.dockerignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
02-backend/document_management_service/src/: lifespan.py  main.py
02-backend/document_management_service/src/api/: dependencies.py  routers.py
02-backend/document_management_service/src/config/: handlers.py  settings.py
02-backend/document_management_service/src/services/: zip_utils.py
02-backend/document_management_service/src/utils/: app_state.py  exceptions.py  service_utils.py
02-backend/logging/: README.md  pyproject.toml
02-backend/logging/src/event_logging/: __init__.py  context.py  db_logging.py  enums.py  event_logger.py  formatters.py  middleware.py  settings.py  types.py  utils.py
02-backend/temporal_codec_service/: .env.local  Dockerfile  Dockerfile.dockerignore  README.md  env.py  main.py  pyproject.toml
02-backend/temporal_job_service/: .env.local  .pre-commit-config.yaml  Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml  pyproject.toml
02-backend/temporal_job_service/src/: main.py
02-backend/temporal_job_service/src/config/: settings.py
02-backend/temporal_job_service/src/services/: job_service_service.py
02-backend/temporal_job_service/src/temporal/: client.py
02-backend/temporal_job_service/src/utils/: lifespan.py
02-backend/temporal_job_service/tests/unit/: test_dummy.py  test_job_service_service.py
04-shared-services/prompt-injection/: README.md  pyproject.toml
04-shared-services/prompt-injection/src/prompt_injection/: prompt_defense.py
04-shared-services/temporal/: README.md  pyproject.toml
04-shared-services/temporal/src/temporal/: __init__.py  auto_trace.py  custom_otel_plugin.py  logging_setup.py  observability.py  payload_codec.py  s3_payload_storage.py  types.py  utils.py  worker.py
05-modulcluster/modul-formale-pruefung/: .env.local  Dockerfile  Dockerfile.dockerignore  README.md  main.py  pyproject.toml
05-modulcluster/modul-formale-pruefung/data/: document_types_sample.json
05-modulcluster/modul-formale-pruefung/src/activities/: __init__.py  dms_activities.py  inhaltsverzeichnis_finder_activities.py  llm_matching_activities.py
05-modulcluster/modul-formale-pruefung/src/config/: config.py  env.py
05-modulcluster/modul-formale-pruefung/src/models/: llm_client.py
05-modulcluster/modul-formale-pruefung/src/prompts/: inhaltsverzeichnis_finder_prompts.py  llm_matching_prompts.py
05-modulcluster/modul-formale-pruefung/src/schemas/: dms_schemas.py  inhaltsverzeichnis_finder_schemas.py  llm_matching_schemas.py
05-modulcluster/modul-formale-pruefung/src/services/: dms_client.py
05-modulcluster/modul-formale-pruefung/src/utils/: external_preprocessing.py  sliding_window.py
05-modulcluster/modul-formale-pruefung/src/workflows/: __init__.py  inhaltsverzeichnis_finder.py  inhaltsverzeichnis_matching.py  llm_matching.py
05-modulcluster/modul-inhaltsextraktion/: .env.local  Dockerfile  Dockerfile.dockerignore  README.md  main.py  pyproject.toml
05-modulcluster/modul-inhaltsextraktion/src/: concurrency.py  config.py  env.py  schemas.py
05-modulcluster/modul-inhaltsextraktion/src/activities/: chunk_enrichment.py  dms_activities.py  enrichment_utils.py  extraction.py  hypothetical_questions.py  llm_invoke.py  preprocessing.py  schwerpunkt_extraction.py  species_scale_extraction.py  summarization.py  vlm_invoke.py  vlm_processing.py
05-modulcluster/modul-inhaltsextraktion/src/models/: emb_client.py  llm_client.py  model_manager.py
05-modulcluster/modul-inhaltsextraktion/src/processors/: chunker.py  enhancer.py  filter.py  filtering_config.py  page_tracker.py  preprocessor.py  sub_chunk_builder.py  text_splitters.py  toc_builder.py
05-modulcluster/modul-inhaltsextraktion/src/providers/: __init__.py  base.py  docling_provider.py
05-modulcluster/modul-inhaltsextraktion/src/utils/: dms_utils.py  path_utils.py  prepare_vlm_inputs.py  rate_limiter.py  sliding_window.py  text_utils.py
05-modulcluster/modul-inhaltsextraktion/src/workflows/: process_documents_workflow.py  single_document_workflow.py  types.py
05-modulcluster/modul-plausibilitaet-pruefung/: .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dockerignore  README.md  main.py  pyproject.toml  run_workflow.py  run_workflow_config.yaml.example
05-modulcluster/modul-plausibilitaet-pruefung/scripts/: port_forward.sh
05-modulcluster/modul-plausibilitaet-pruefung/src/activities/: __init__.py  cluster_summarizer.py  context_checker.py  dms_activities.py  extraction_activities.py  qdrant_activities.py  risk_screener.py
05-modulcluster/modul-plausibilitaet-pruefung/src/config/: config.py  env.py
05-modulcluster/modul-plausibilitaet-pruefung/src/dms/: dms_client.py  schemas.py
05-modulcluster/modul-plausibilitaet-pruefung/src/models/: emb_client.py  llm_client.py
05-modulcluster/modul-plausibilitaet-pruefung/src/qdrant/: client.py  schemas.py
05-modulcluster/modul-plausibilitaet-pruefung/src/workflows/: clients.py  input_schemas.py  orchestrator_workflow.py  utils.py
(+392 files in other folders)
