[project]
name = "document-management-service"
version = "0.1.0"
description = "Document Management Service"
requires-python = ">=3.13, <3.14"
readme = "README.md"
dependencies = [
    "prometheus-fastapi-instrumentator",
    "typing-extensions>=4.5.0",
    "fastapi>=0.120.1",
    "uvicorn>=0.35.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "sqlalchemy>=2.0.41,<3.0.0",
    "alembic>=1.16.4,<2.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "httpx>=0.28.1,<0.29.0",
    "pyyaml>=6.0.2,<7.0.0",
    "puremagic>=1.30,<2.0",
    "s3fs>=2026.2.0",
    "h11>=0.16.0",
    "aioboto3>=15.5.0,<16.0.0",
    "aiohttp>=3.13.3,<4.0.0",
    "event-logging",
    "temporalio>=1.23.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9",
    "pytest-asyncio>=1.1.0,<2",
    "httpx>=0.28.1,<0.29",
    "pytest-cov>=6.2.1,<7",
    "interrogate>=1.7.0,<2",
    "pytest-env>=1.1.5,<2",
    "pytest-httpx>=0.35.0,<0.36",
    "pre-commit>=4.3.0,<5",
    "types-pyyaml>=6.0.12.20250915,<7",
    "mypy>=1.18.2,<2",
    "boto3-stubs>=1.42.15,<2",
    "asgi-lifespan>=2.1.0,<3",
    "aiosqlite>=0.20.0",
    "ruff>=0.14.6,<0.15",
    "pyrefly>=0.49.0",
]

[tool.uv]
package = false

[tool.uv.sources]
event-logging = { workspace = true }


[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test (uses real external services)"
]
addopts = "-m 'not integration' --cov=src --cov-report=term-missing"
testpaths = [
    "tests"
]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
source = ["src"]
omit = ["src/models/db/migrations/**"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-module = true
ignore-nested-functions = true
exclude = [
    "tests", # Exclude docstrings for tests
]
verbose = 1

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "src/models/db/migrations/*",
]

[tool.pyrefly]
search_path = ["."]
project-includes = ["."]
disable-search-path-heuristics = true

[tool.pyrefly.errors]
implicit-any = "error"
unannotated-parameter = "error"
unannotated-return = "error"
unannotated-attribute = "error"
implicit-abstract-class = "error"
implicitly-defined-attribute = "error"
missing-override-decorator = "error"
not-required-key-access = "error"
open-unpacking = "error"
untyped-import = "error"
missing-source = "error"
missing-source-for-stubs = "error"
deprecated = "error"
redundant-cast = "error"
unnecessary-comparison = "error"
