[project]
name = "prompt-injection"
version = "0.1.0"
requires-python = ">=3.13, <3.14"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src/prompt_injection"]

[tool.hatch.build.targets.wheel.sources]
"src/prompt_injection" = "prompt_injection"