[project]
name = "plausibilitaet-pruefung"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.13,<3.14"
readme = "README.md"
dependencies = [
    "openai>=1.66.3,<2.0.0",
    "temporalio (>=1.18.2,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "qdrant-client (>=1.16.1,<2.0.0)",
    "prompt-injection",
    "temporal",
    "networkx>=3.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "coverage>=7.11.3,<8.0.0",
    "interrogate>=1.7.0,<2.0.0",
    "ruff>=0.14.6,<0.15",
    "pyrefly>=0.49.0",
]

[tool.uv]
package = false

[tool.uv.sources]
prompt-injection = { workspace = true }
temporal = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyrefly]
search_path = [".", "src"]
project-includes = ["."]
project-excludes = ["**/notebooks/**"]
disable-search-path-heuristics = true
[tool.pyrefly.errors]
# Core strict typing - catch implicit Any and missing annotations
implicit-any = "error"
unannotated-parameter = "error"
unannotated-return = "error"
unannotated-attribute = "error"
# Class strictness
implicit-abstract-class = "error"
implicitly-defined-attribute = "error"
missing-override-decorator = "error"
# TypedDict strictness
not-required-key-access = "error"
open-unpacking = "error"
# Import strictness
untyped-import = "error"
missing-source = "error"
missing-source-for-stubs = "error"
# Keep warnings as errors for maximum strictness
deprecated = "error"
redundant-cast = "error"
unnecessary-comparison = "error"
